<resources>
    <string name="app_name">AgroLinks™</string>
    <string name="ui_content_header_crops_market">Comercialização agrícola</string>
    <string name="ui_content_header_farm_inputs">Serviços e insumos agrícolas</string>
    <string name="ui_content_header_farm_news">Notícias de agronegócios</string>
    <string name="farm_market_alias">Campanhas</string>
    <string name="farm_in_services">Serviços</string>
    <string name="farm_in_info">Notícias</string>
    <string name="title_support_line">Fale conosco</string>
    <string name="title_setttings">Configurações</string>
    <string name="title_profile">Meu Perfil</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Minha Página</string>
    <string name="title_delete">Eliminar</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_modifications">Modificar</string>
    <string name="ui_piece_description">Outr@s...</string>
    <string name="preference_user_profile">user_profile_preference</string>
    <string name="preference_user_communications">user_communications_mode</string>
    <string name="preference_notify_mode_key">user_notify_mode_key</string>
    <string name="title_share">Partilhar</string>

</resources>
