<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.TabLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main.tabLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom">

    <!--<android.support.design.widget.TabItem
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_in_services" />-->

    <android.support.design.widget.TabItem
        android:id="@+id/ui.main.tab_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_market_alias" />

    <android.support.design.widget.TabItem
        android:id="@+id/ui.main.tab_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_in_services" />

    <android.support.design.widget.TabItem
        android:id="@+id/ui.main.tab_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/farm_in_info" />

</android.support.design.widget.TabLayout>